2007-06-26  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs: Fixed up a bit.
	* Navigation/TagDatabaseManager.cs: The entire tag database for each
	  project is managed here.
	* Navigation/Namespace.cs, Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/NamespaceNodeBuilder.cs, CBinding.addin.xml: Namespaces
	  now appear in the Class Pad.
	* Navigation/ProjectNavigationInformation.cs,
	  Navigation/ProjectNavigationInformationManager.cs: Information on a
	  project's navigation information is kept and managed here.
	* Makefile.am, CBinding.mdp: Added new files.

2007-06-25  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/Namespace.cs,
	  Navigation/ProjectNodeBuilderExtension.cs, CBinding.addin.xml:
	  Started work on code navigation.

2007-06-25  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  Makefile.am, CBinding.addin.xml, CBinding.mdp, Completion.cs: Got
	  rid of anything related to CTagsCompletion.

2007-06-24  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Changed to accomodate the new CTagsCompletion
	  design
	* Completion.cs: This is where CBinding will specify more specialized
	  behavior for the CTagsCompletion AddIn

2007-06-22  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Made a very simple implementation of
	  AddTagsToProvider which is the method where the logic about which
	  tags shoud be added to the completion list window takes place.

2007-06-21  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Added a package icon to both packages
	  columns.
	* Project/CProjectBinding.cs, Project/CProject.cs: Implemented
	  CreateSingleFileProject

2007-06-20  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Project/CProject.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,