@@ -119,7 +119,7 @@ namespace CBinding {
             w9.Spacing = 2;
             // Container child GtkHBox.Gtk.Container+ContainerChild
             Gtk.Image w10 = new Gtk.Image();
-            w10.Name = "image8";
+            w10.Name = "image14";
             w10.Pixbuf = Stetic.IconLoader.LoadIcon("gtk-remove", 16);
             w9.Add(w10);
             // Container child GtkHBox.Gtk.Container+ContainerChild
